--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <li><i class="fa-solid fa-user"></i>Log in</li>
         </ul>
     </section>
-    <div>
-        <nav>
+    <nav>
+        <div>
             <h1>OSCAR</h1>
             <ul>
                 <li><a href="">Medicare</a></li>
@@ -27,10 +27,18 @@
             <button>
                 <p>Shop Plans</p>
             </button>
-        </nav>
-    </div>
+        </div>
+    </nav>
     <section class="hero">
-        <img src="assets/images/hero.png"> 
+        <img src="assets/images/hero.png" alt="hero banner">  
+    </section>
+    <div class="planform">
+        <img src="assets/images/plan_form.png" alt="planform">
+    </div>
+    <section>
+        <div>
+            <img src="assets/images/team_dedication.png" alt="team dedication"> 
+        </div>
     </section>
 </body>
 </html>
